Java 17 compatibility